5.0.0
- Added immediately browser output to the output choices.
- Added default value analysis to the additional info.
- Added German localisation.
- Added serialized string pretty print.
- Change: Removed deprecated code.
- Change: Drop PHP 7.0 support
- Change: Streamlined the type display of strings
- Change: Defined visibility for all constants.
- Change: Added missing PHP 7.1 return type to methods.
- Change: Moved the ViewConstInterface to the translations.
- Change: Moved the local declaration retrieval methods into
  their own API.
- Change: Reworked some help texts.
- Change: Input elements are now allowed to not have any eval
  callback.
- Change: Remove the inherited constants from the kreXX
  main class.
- Change: String and array analysis now cache their settings.
- Change: The ScalarString class gets instantiated only once
  per run.
- Change: Removed the scope analysis setting.
- Change: Lots of deprecations.
- Change: Removed the XML decoder.

4.1.4
- Added support for readonly properties
- Bugfix: Correctly identify uninitialized properties.

4.1.3
- Added microtime analysis to the float routing.
- Added microtime analysis to the string scalar analysis.
- Added type hint to the additional data for the first
  element.
- Updated to PHP 8.1
- Change: Code cleanup.
- Bugfix: Display info about public properties in predeclared
  classes.
- Bugfix: Comment inheritance resolving works more reliable.
- Bugfix: Method return type comment parsing works more
  reliable.
- Bugfix: Standard Loading of the configuration file works again.
- Bugfix: Mime type string and file do not overwrite each others
  anymore.
- Bugfix: K-Type padding for the Hans skin is too small.

4.1.2
- Change: Do not display an empty array, when there are no
  attributes in the XML analysis.
- Bugfix: Add additional error handling to the file service
  to get by with high traffic sites (Please, never debug a
  productive site. At least make sure that the logger can